--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,10 @@ header {
 .firstBlock {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: url(/first-page-bg/img-overlay.png),
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
     url(/first-page-bg/img.png);
 }
 h1 {
@@ -308,24 +311,29 @@ h2 {
   justify-content: center;
   width: 44px;
   height: 44px;
-  background-color: var(--white-color);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50px;
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--accent-color);
+  transition: background-color 0.3s linear;
 }
 
 .social-link:hover svg,
 .social-link:focus svg {
   fill: var(--white-color);
+  transition: fill 0.3s linear;
 }
 
 .social-link svg {
   fill: var(--links-color);
   width: 20px;
   height: 20px;
+}
+.social-link:not(:last-child) {
+  margin-right: 10px;
 }
 
 .clients-list {
@@ -452,31 +460,12 @@ h2 {
 h4 {
   display: none;
 }
-/* 
-.portfolio-list {
-  min-width: 1200px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.portfolio-item {
-  font-size: 18px;
-  border: 1px solid #eeeeee;
-  margin-bottom: 30px;
-  margin-right: 30px;
-}
-
-.portfolio-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
- */
 
 /* ============== FOOTER =================== */
 
 footer .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 footer {
   background: var(--block-bg-color);
@@ -508,4 +497,36 @@ address a {
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.join {
+  display: flex;
+  flex-direction: column;
+  padding-left: 70px;
+  padding-top: 12px;
+}
+.join span {
+  text-transform: uppercase;
+  color: var(--white-color);
+  font-size: 14px;
+  font-weight: 700;
+  padding-bottom: 20px;
+}
+
+.social-links-footer {
+  width: 206px;
+  height: 44px;
+}
+.social-links-footer-list {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 0;
+}
+
+.join .social-link svg {
+  fill: var(--white-color);
+  width: 20px;
+  height: 20px;
 }
