--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,15 @@ ul {
 li > a:hover,
 li > a:focus {
   color: var(--accent-color);
+  transition: color 0.2s linear;
 }
 .nav-list-address .header-contact {
   color: var(--light-text-color);
+  transition: color 0.2s linear;
 }
 .header-contact:hover {
   color: var(--accent-color);
+  transition: color 0.2s linear;
 }
 
 .header-contact > svg {
@@ -98,6 +101,7 @@ li > a:focus {
 .header-contact:hover > svg,
 .header-contact:focus > svg {
   fill: var(--accent-color);
+  transition: fill 0.2s linear;
 }
 
 .header-contact {
@@ -405,6 +409,8 @@ h2 {
 .list-btn-item:focus {
   background-color: var(--accent-color);
   color: var(--white-color);
+  transition: color 0.2s linear;
+  transition: background-color 0.2s linear;
   box-shadow: 0px 3px 1px #0000001a, 0px 1px 2px #00000014,
     0px 2px 2px #0000001f;
   border-radius: 4px;
