--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ header {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(/first-page-bg/img.png);
+    url(../img/first-page-bg/img.png);
 }
 h1 {
   height: 120px;
