--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,15 @@ h2 {
   align-items: center;
   justify-content: center;
 }
+.social-link > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50px;
+}
 .social-link {
   display: flex;
   align-items: center;
@@ -333,15 +342,14 @@ h2 {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50px;
 }
-
 .social-link:hover,
-.social-link:focus {
+.social-link > a:focus {
   background-color: var(--accent-color);
   transition: background-color 0.3s linear;
 }
 
 .social-link:hover svg,
-.social-link:focus svg {
+.social-link > a:focus svg {
   fill: var(--white-color);
   transition: fill 0.3s linear;
 }
@@ -360,6 +368,15 @@ h2 {
   align-items: center;
   justify-content: space-between;
 }
+.client-list-iteam > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--links-color);
+  border-radius: 4px;
+  width: 170px;
+  height: 90px;
+}
 .client-list-iteam {
   display: flex;
   align-items: center;
@@ -376,12 +393,12 @@ h2 {
 }
 
 .client-list-iteam:hover svg,
-.client-list-iteam:focus svg {
+.client-list-iteam > a:focus svg {
   fill: var(--accent-color);
 }
 
 .client-list-iteam:hover,
-.client-list-iteam:focus {
+.client-list-iteam :focus {
   border-color: var(--accent-color);
 }
 
@@ -432,6 +449,15 @@ h2 {
 
 /* ===============END BTNS BLOCK=============== */
 
+.portfolio-list > a {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * var(--card-set-gap));
+  margin-top: calc(-1 * var(--card-set-gap));
+}
 .portfolio-list {
   padding: 0;
   margin: 0;
@@ -441,9 +467,8 @@ h2 {
   margin-left: calc(-1 * var(--card-set-gap));
   margin-top: calc(-1 * var(--card-set-gap));
 }
-
 .portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-item > a:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
